[package]
name = "dws"
version = "0.1.0"
authors = ["avh"]
edition = "2018"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

jack = "0.6.2"
dasp = "0.11.0"
dasp_ring_buffer = "0.11.0"
crossbeam-channel = "0.4.2"
text_io = "0.1.8"
approx = "0.3.2"